--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -12,8 +12,7 @@
       android:id="@+id/appbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:fitsSystemWindows="true"
-      >
+      android:fitsSystemWindows="true">
 
     <android.support.design.widget.CollapsingToolbarLayout
         android:id="@+id/collapsing_toolbar"
@@ -22,8 +21,7 @@
         android:fitsSystemWindows="true"
         app:contentScrim="?attr/colorPrimary"
         app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-        >
+        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
       <ImageView
           android:id="@+id/moviePoster"
@@ -32,8 +30,7 @@
           android:layout_centerHorizontal="true"
           android:fitsSystemWindows="true"
           android:scaleType="centerCrop"
-          app:layout_collapseMode="parallax"
-          />
+          app:layout_collapseMode="parallax" />
 
     </android.support.design.widget.CollapsingToolbarLayout>
 
